cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09345_247663370.yaml
Resources:
  nexttssampleappVPC5EF0F072:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: AwsCdkStack/next-ts-sample-app-VPC
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/Resource
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1Subnet24A1C83F:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/17
      VpcId:
        Ref: nexttssampleappVPC5EF0F072
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet1
        - Key: aws-cdk:subnet-name
          Value: next-ts-sample-app-Subnet-DBCluster
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet1/Subnet
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1RouteTable7A85C999:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: nexttssampleappVPC5EF0F072
      Tags:
        - Key: Name
          Value: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet1
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet1/RouteTable
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1RouteTableAssociationB9CC521C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1RouteTable7A85C999
      SubnetId:
        Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1Subnet24A1C83F
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet1/RouteTableAssociation
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1DefaultRouteE722897F:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1RouteTable7A85C999
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: nexttssampleappVPCIGW51144675
    DependsOn:
      - nexttssampleappVPCVPCGW9C872340
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet1/DefaultRoute
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2Subnet8EBF52EE:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/17
      VpcId:
        Ref: nexttssampleappVPC5EF0F072
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet2
        - Key: aws-cdk:subnet-name
          Value: next-ts-sample-app-Subnet-DBCluster
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet2/Subnet
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2RouteTable2892D635:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: nexttssampleappVPC5EF0F072
      Tags:
        - Key: Name
          Value: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet2
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet2/RouteTable
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2RouteTableAssociation6B10050D:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2RouteTable2892D635
      SubnetId:
        Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2Subnet8EBF52EE
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet2/RouteTableAssociation
  nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2DefaultRoute1DC057F8:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2RouteTable2892D635
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: nexttssampleappVPCIGW51144675
    DependsOn:
      - nexttssampleappVPCVPCGW9C872340
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/next-ts-sample-app-Subnet-DBClusterSubnet2/DefaultRoute
  nexttssampleappVPCIGW51144675:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AwsCdkStack/next-ts-sample-app-VPC
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/IGW
  nexttssampleappVPCVPCGW9C872340:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: nexttssampleappVPC5EF0F072
      InternetGatewayId:
        Ref: nexttssampleappVPCIGW51144675
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-VPC/VPCGW
  nexttssampleappRDSSubnetGroup56DFC373:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for next-ts-sample-app-RDS database
      SubnetIds:
        - Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet1Subnet24A1C83F
        - Ref: nexttssampleappVPCnexttssampleappSubnetDBClusterSubnet2Subnet8EBF52EE
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-RDS/SubnetGroup
  nexttssampleappRDSSecurityGroup7A7C2533:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for next-ts-sample-app-RDS database
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: nexttssampleappVPC5EF0F072
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-RDS/SecurityGroup/Resource
  nexttssampleappRDSSecretDA4DFA3E:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: '"@/\'
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"syscdk"}'
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-RDS/Secret/Resource
  nexttssampleappRDSSecretAttachmentF0023E54:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: nexttssampleappRDSSecretDA4DFA3E
      TargetId:
        Ref: nexttssampleappRDS6A22806F
      TargetType: AWS::RDS::DBInstance
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-RDS/Secret/Attachment/Resource
  nexttssampleappRDS6A22806F:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t3.micro
      AllocatedStorage: "100"
      CopyTagsToSnapshot: true
      DBSubnetGroupName:
        Ref: nexttssampleappRDSSubnetGroup56DFC373
      DeletionProtection: true
      Engine: postgres
      MasterUsername:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: nexttssampleappRDSSecretDA4DFA3E
            - :SecretString:username::}}
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: nexttssampleappRDSSecretDA4DFA3E
            - :SecretString:password::}}
      StorageType: gp2
      VPCSecurityGroups:
        - Fn::GetAtt:
            - nexttssampleappRDSSecurityGroup7A7C2533
            - GroupId
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: AwsCdkStack/next-ts-sample-app-RDS/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.32.2,@aws-cdk/aws-cloudwatch=1.32.2,@aws-cdk/aws-ec2=1.32.2,@aws-cdk/aws-events=1.32.2,@aws-cdk/aws-iam=1.32.2,@aws-cdk/aws-kms=1.32.2,@aws-cdk/aws-lambda=1.32.2,@aws-cdk/aws-logs=1.32.2,@aws-cdk/aws-rds=1.32.2,@aws-cdk/aws-s3=1.32.2,@aws-cdk/aws-s3-assets=1.32.2,@aws-cdk/aws-sam=1.32.2,@aws-cdk/aws-secretsmanager=1.32.2,@aws-cdk/aws-sqs=1.32.2,@aws-cdk/aws-ssm=1.32.2,@aws-cdk/core=1.32.2,@aws-cdk/cx-api=1.32.2,@aws-cdk/region-info=1.32.2,jsii-run [...]
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
